# Database-creation-simulation-of-mailing

./: README.md  app.py  main.py  models.py  pyproject.toml
mailing simulation/: consumer_email.py  consumer_sms.py  producer.py
